# automato-etc

./: .gitignore  README.md  flake.nix
matomsg/: Cargo.toml
matomsg/src/: automatomsg.rs  main.rs
matoserver/elm/: elm.json
matoserver/elm/src/: AutomatoListing.elm  AutomatoView.elm  Bindings.elm  Data.elm  Main.elm  Messages.elm  MsCommon.elm  Payload.elm  ProjectListing.elm  PublicInterface.elm  Route.elm  SerialError.elm  ShowMessage.elm
matoserver/server/: Cargo.toml  config.toml  refresh_elm_bindings.sh  watchrun.sh
matoserver/server/src/: config.rs  data.rs  interfaces.rs  main.rs  messages.rs  serial_error.rs  util.rs
rust-serial/src/: automatomsg.rs  main.rs
rustlib/: Cargo.toml
rustlib/src/: automatomsg.rs  lib.rs
serial/client/: client.ino
serial/server/: server.ino
sketches/humidor-remote/: humidor-remote.ino
sketches/remotelora/: remotelora.ino
sketches/serialtolora/: serialtolora.ino
testmsgs/: Cargo.toml  ctest.sh  jsonreadonly.sh  jsontest.sh
testmsgs/src/: main.rs
webserver/: flake.nix
