[package]
name = "automato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
serde_json = "1.0"
elm_rs = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.2.0"
